kotlin-parser/src/test/semlang/validatorTests/fail/naturalLiteral5.sem
function myStuff.myFunction(): Natural {
  Natural."01"
}
